--- a/dispwindow.ui
+++ b/dispwindow.ui
@@ -19,80 +19,57 @@
    <string>'Oly Cow - Herodotus</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QVBoxLayout" name="layout_main">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QLabel" name="label_season">
-        <property name="text">
-         <string>Season:</string>
-        </property>
-       </widget>
-      </item>
+     <layout class="QHBoxLayout" name="layout_season">
       <item>
        <widget class="QComboBox" name="comboBox_season">
         <item>
          <property name="text">
-          <string>2014-2015 Cascade Effect</string>
+          <string>2014-15 Cascade Effect</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>2013-2014 Block Party!</string>
+          <string>2013-14 Block Party!</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>2012-2013 Ring it Up!</string>
+          <string>2012-13 Ring it Up!</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>2011-2012 Bowled Over!</string>
+          <string>2011-12 Bowled Over!</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>2010-2011 Get Over It!</string>
+          <string>2010-11 Get Over It!</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>2009-2010 Hot Shot!</string>
+          <string>2009-10 Hot Shot!</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>2008-2009 Face Off!</string>
+          <string>2008-09 Face Off!</string>
          </property>
         </item>
        </widget>
       </item>
       <item>
-       <spacer name="spacer_L">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_max_pages">
+       <widget class="QPushButton" name="pushButton_game">
         <property name="text">
-         <string>Max Pages:</string>
+         <string>Game Info</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QSpinBox" name="spinBox_max_pages"/>
-      </item>
-      <item>
-       <spacer name="spacer_R">
+       <spacer name="spacer_season">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
@@ -111,20 +88,265 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_about">
+        <property name="text">
+         <string>About</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_close">
+        <property name="text">
+         <string>Close</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <widget class="Line" name="line_main">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <layout class="QGridLayout" name="layout_params">
+      <item row="0" column="3" rowspan="3">
+       <spacer name="spacer_params_mid">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="0" column="0" rowspan="3">
+       <spacer name="spacer_L">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="2" column="5">
+       <widget class="QLineEdit" name="lineEdit_city"/>
+      </item>
+      <item row="0" column="4">
+       <widget class="QLabel" name="label_country">
+        <property name="text">
+         <string>Country:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="4">
+       <widget class="QLabel" name="label_state">
+        <property name="text">
+         <string>State/Province:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="5">
+       <widget class="QComboBox" name="comboBox_state"/>
+      </item>
+      <item row="1" column="1">
+       <widget class="QLabel" name="label_name">
+        <property name="text">
+         <string>Team Name:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLabel" name="label_rookie">
+        <property name="text">
+         <string>Rookie Year:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="5">
+       <widget class="QComboBox" name="comboBox_country">
+        <item>
+         <property name="text">
+          <string>---- Any Country ----</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Canada</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Mexico</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>U.S.A.</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QComboBox" name="comboBox_rookie">
+        <item>
+         <property name="text">
+          <string>---- Any Year ----</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2014-15 Cascade Effect</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2013-14 Block Party!</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2012-13 Ring it Up!</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2011-12 Bowled Over!</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2010-11 Get Over It!</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2009-10 Hot Shot!</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2008-09 Face Off!</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="2" column="4">
+       <widget class="QLabel" name="label_city">
+        <property name="text">
+         <string>City:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QLineEdit" name="lineEdit_number"/>
+      </item>
+      <item row="1" column="2">
+       <widget class="QLineEdit" name="lineEdit_name"/>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLabel" name="label_number">
+        <property name="text">
+         <string>Team Number:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="6" rowspan="3">
+       <spacer name="spacer_R">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="layout_search">
+      <item>
+       <widget class="Line" name="line_L">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_clear">
+        <property name="text">
+         <string>Clear Fields</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_search">
+        <property name="text">
+         <string>Search</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_browse">
+        <property name="text">
+         <string>Browse All</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Line" name="line_R">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
     <item>
      <widget class="QTableView" name="tableView_main">
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
       <attribute name="verticalHeaderVisible">
        <bool>false</bool>
       </attribute>
-     </widget>
-    </item>
-    <item>
-     <widget class="QProgressBar" name="progressBar_download">
-      <property name="value">
-       <number>100</number>
-      </property>
      </widget>
     </item>
    </layout>
