--- a/dispwindow.ui
+++ b/dispwindow.ui
@@ -782,6 +782,12 @@
     </item>
     <item>
      <widget class="QTableView" name="tableView_main">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>240</height>
+       </size>
+      </property>
       <property name="editTriggers">
        <set>QAbstractItemView::NoEditTriggers</set>
       </property>
