--- a/detailswindow.ui
+++ b/detailswindow.ui
@@ -66,7 +66,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0" rowspan="2">
+   <item row="3" column="0" rowspan="2">
     <layout class="QFormLayout" name="layout_info">
      <property name="rowWrapPolicy">
       <enum>QFormLayout::WrapLongRows</enum>
@@ -74,13 +74,17 @@
      <property name="formAlignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
+     <property name="horizontalSpacing">
+      <number>18</number>
+     </property>
      <property name="verticalSpacing">
       <number>12</number>
      </property>
      <item row="0" column="0">
       <widget class="QLabel" name="label_season_label">
        <property name="text">
-        <string>Rookie Season:</string>
+        <string>Rookie
+Season:</string>
        </property>
       </widget>
      </item>
@@ -101,7 +105,8 @@
      <item row="3" column="0">
       <widget class="QLabel" name="label_state_label">
        <property name="text">
-        <string>State/Province:</string>
+        <string>State/
+Province:</string>
        </property>
       </widget>
      </item>
@@ -144,7 +149,7 @@
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
-         <height>6</height>
+         <height>0</height>
         </size>
        </property>
       </spacer>
@@ -152,7 +157,7 @@
      <item row="6" column="0" colspan="2">
       <widget class="QLabel" name="label_website">
        <property name="text">
-        <string>http://???</string>
+        <string>Team Website</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -193,13 +198,19 @@
      </item>
     </layout>
    </item>
-   <item row="2" column="1">
+   <item row="3" column="1">
     <widget class="QLabel" name="label_pic">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>240</width>
+       <height>150</height>
+      </size>
      </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
@@ -212,7 +223,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="4" column="1">
     <layout class="QHBoxLayout" name="layout_nav">
      <item>
       <spacer name="spacer_pic_L">
@@ -310,7 +321,7 @@
      </item>
     </layout>
    </item>
-   <item row="4" column="0" colspan="2">
+   <item row="5" column="0" colspan="2">
     <layout class="QHBoxLayout" name="layout_close">
      <property name="spacing">
       <number>12</number>
@@ -358,6 +369,22 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="2" column="0" colspan="2">
+    <spacer name="spacer_title">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>12</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
