--- a/detailswindow.ui
+++ b/detailswindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>480</width>
-    <height>360</height>
+    <height>368</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -220,6 +220,9 @@ Province:</string>
      </property>
      <property name="text">
       <string/>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
